# spaxel

./: .dockerignore  .gitignore  .golangci.yml  .needle-predispatch-sha  .needle.yaml  API_IMPLEMENTATION_STATUS.md  Dockerfile  PROGRESS.md  README.md  blob_observation.sh  docker-compose.yml  fix_ble_handlers.py  go.work  window_test.sh
.beads/: config.yaml  issues.jsonl
.marathon/: instruction.md  start.sh
dashboard/: README.md  ambient.html  fleet.html  help_articles.json  index.html  integrations.html  jest.config.js  live.html  package-lock.json  package.json  playwright.config.js  setup.html  simple.html  simulator.html  test-transformcontrols.html  tsconfig.json
docs/: ci-accessibility-integration.md  ci-benchmark-integration.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble.c  ble.h  csi.c  csi.h  idf_component.yml  led.c  led.h  main.c  ntp.c  ntp.h  nvs_migration.c  nvs_migration.h  provision.c  provision.h  spaxel.h  version.h.in  websocket.c  websocket.h  wifi.c  wifi.h
mothership/: go.mod  go.sum  test_goroutine  test_syntax
notes/: bf-13s0.md  bf-195o.md  bf-1bmg-js-ts.md  bf-1m2x-verification.md  bf-1oj7-transformcontrols-analysis.md  bf-1q3m-consolidated.md  bf-26ta-findings.md  bf-26ta-javascript-results.md  bf-26ta-typescript-results.md  bf-28dv.md  bf-2irz-findings.md  bf-2r5o-findings.md  bf-2y6u-implementation.md  bf-33za.md  bf-3aij-pattern.md  bf-3f16.md  bf-3ifj.md  bf-3ldj-findings.md  bf-3ukb.md  bf-3wkz-dashboard-identity-surface.md  bf-3y9r.md  bf-4bhd-reverification.md  bf-4bhd.md  (+15 more)
(+848 files in other folders)
